--- a/server/templates/index.html
+++ b/server/templates/index.html
@@ -58,7 +58,7 @@
                 <div class="adv">
                     <a href="#"><img src="{{ url_for('static',filename='images/adv.jpg', _external=True) }}" alt=""></a>
                 </div>
-                <div class="content-box">
+                <div class="content-box clearfix">
                     <div class="banner-box clearfix">
                         <div class="layui-carousel" id="banner">
                             <div carousel-item>
@@ -154,14 +154,145 @@
 
                                 </div>
                             </div>
+                            <div class="article_category_item">
+                                <p>专题推荐</p>
+                                <div class="special_list">
+                                    <div class="special_item">
+                                        <div class="special-shadow-wrapper"></div>
+                                        <div class="special_img">
+                                            <img src="{{ url_for('static',filename='images/special1.jpg', _external=True) }}" >
+                                            <p>视觉中国引众怒，“维权”大户为何成了眼中钉？</p>
+                                        </div>
+                                        <div class="special_footer">
+                                            <p>近日黑洞照片的公开引发全民关注外，也让视觉中国等商业图片网站成为“黑洞中的黑洞”。
+                                                原本属于Event Horizon Telescope组织的黑洞照片被视觉中国用于商业用途，4月11日晚，
+                                                天津网信办深夜约谈视觉中国，网站已关闭进行彻底整改。“维权之王”为何惹了众怒？版权的生意将如何继续？</p>
+                                        </div>
+                                    </div>
+                                    <div class="special_item">
+                                        <div class="special-shadow-wrapper"></div>
+                                        <div class="special_img">
+                                            <img src="{{ url_for('static',filename='images/special2.jpg', _external=True) }}" >
+                                            <p>刘强东对上万兄弟“动手”了，快递业开始刮骨疗伤？</p>
+                                        </div>
+                                        <div class="special_footer">
+                                            <p>4月7日晚间，针对取消快递员底薪的报道，京东物流正面回应坐实了此前的传言。另一边，曾经抱紧阿里大腿的通达系，在拼多多等下沉红利的带动下，中通业绩直逼顺丰。依赖电商的物流行业，也无奈受限于电商：电商增速正在放缓，快递行业的空间也逐渐看到了边界，行业近身肉搏中，物流江湖格局也在悄然发生着变化，京东降薪和强化揽收意义何在？通达系和顺丰未来还会有那些增长机会？</p>
+                                        </div>
+                                    </div>
+                                    <div class="special_item">
+                                        <div class="special-shadow-wrapper"></div>
+                                        <div class="special_img">
+                                            <img src="{{ url_for('static',filename='images/special3.jpg', _external=True) }}" >
+                                            <p>2019中国基金合伙人未来峰会</p>
+                                        </div>
+                                        <div class="special_footer">
+                                            <p>当下，中国一级市场正处于至关重要的转折点。在经历了创投市场的狂飙...</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="article_list">
+                                    <div class="article_item">
+                                        <div class="shadow-wrapper-card"></div>
+                                        <div class="shadow-content clearfix">
+                                            <a href="#" class="article_pic">
+                                                <img src="{{ url_for('static',filename='images/article1.jpg', _external=True) }}" alt="">
+                                            </a>
+                                            <div class="article_item_info">
+                                                <div class="article_title_header ellipsis-2">
+                                                    <span class="article_tag">职场</span>
+                                                    <a href="#" class="article_title">做计划，千万要避开这5个误区！</a>
+                                                </div>
+                                                <div class="article_description ellipsis-2">
+                                                    <a href="#">
+                                                        选择去驻外并不是一个简单的决定。海外经历也许不只是职业生涯的一笔，它还有可能影响整个职业发展路径。
+                                                    </a>
+                                                </div>
+                                                <div class="article_footer_bar">
+                                                    <span class="kr-flow-bar-motif">来自主题：<a href="#" target="_blank">职场新鲜人</a>|</span>
+                                                    <a class="kr-flow-bar-author" href="#">
+                                                        领英LinkedIn
+                                                    </a>
+                                                    <span class="kr-flow-bar-time">
+                                                        <i class="kr-flow-bar-time-icon"></i>17分钟前
+                                                    </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="article_item">
+                                        <div class="shadow-wrapper-card"></div>
+                                        <div class="shadow-content clearfix">
+                                            <a href="#" class="article_pic">
+                                                <img src="{{ url_for('static',filename='images/article2.jpg', _external=True) }}" alt="">
+                                            </a>
+                                            <div class="article_item_info">
+                                                <div class="article_title_header ellipsis-2">
+                                                    <span class="article_tag">职场</span>
+                                                    <a href="#" class="article_title">出海日报 | 字节跳动投资的新闻聚合平台Dailyhunt欲进行融资；新加坡大数据提供商AirTrunk完成3.32亿美</a>
+                                                </div>
+                                                <div class="article_description ellipsis-2">
+                                                    <a href="#">
+                                                        以及，日本乐天资本和新加坡投资基金 EV Growth 共同领投新加坡返利平台 ShopBack 4500万美元融资；软银雇佣摩根大通等投行高管管理旗下专注拉美地区投资的50亿美元基金；新加坡生活方式平台 Clozette 完成1000万美元 C 轮融资。
+                                                    </a>
+                                                </div>
+                                                <div class="article_footer_bar">
+                                                    <span class="kr-flow-bar-motif">来自主题：<a href="#" target="_blank">职场新鲜人</a>|</span>
+                                                    <a class="kr-flow-bar-author" href="#">
+                                                        魏佩琳@36氪出海
+                                                    </a>
+                                                    <span class="kr-flow-bar-time">
+                                                        <i class="kr-flow-bar-time-icon"></i>23分钟前
+                                                    </span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
 
-
+                                </div>
+                            </div>
+                            <p class="index_button_p">
+                                <span class="load_more">查看更多资讯</span>
+                            </p>
                         </div>
                         <div class="article_box_right">
+                            <div class="sider_bar_right">
+                                <div class="sider_bar_title">
+                                    <span class="title-icon"></span>
+                                    <div class="bar_title">最新快讯</div>
+                                </div>
+                                <div class="sider_bar_box">
+                                    <div class="sider_bar_content">
+                                        <div class="sider_bar_article">
+                                            <div class="sider_bar_article_item">
+                                                <span class="sider_bar_article_item_icon"></span>
+                                                <p>人民日报评视觉中国：质疑，是为了更好保护版权</p>
+                                                <div class="sider_bar_article_item_time">26分钟前</div>
+                                                <div class="sider_bar_article_item_detail">
+                                                    人民日报评论文章指出，无论是转发黑洞照片，还是吐槽视觉中国，都应该形成这样的社会共识：
+                                                    我们尊重著作权，不意味着要纵容不合规的经营方式；我们指摘经营方式的瑕疵，更不能走到另一个极端，
+                                                    损害保护知识产权的社会共识。
+                                                </div>
+                                            </div>
 
+                                            <div class="sider_bar_article_item">
+                                                <span class="sider_bar_article_item_icon"></span>
+                                                <p>人民日报评视觉中国：质疑，是为了更好保护版权</p>
+                                                <div class="sider_bar_article_item_time">26分钟前</div>
+                                                <div class="sider_bar_article_item_detail">
+                                                    人民日报评论文章指出，无论是转发黑洞照片，还是吐槽视觉中国，都应该形成这样的社会共识：
+                                                    我们尊重著作权，不意味着要纵容不合规的经营方式；我们指摘经营方式的瑕疵，更不能走到另一个极端，
+                                                    损害保护知识产权的社会共识。
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
+
                 </div>
+
             </div>
         </div>
     </div>
@@ -169,6 +300,7 @@
 {% block script %}
     <script>
         layui.use('carousel', function(){
+            var $ = layui.$;
             var carousel = layui.carousel;
             //建造实例
             carousel.render({
@@ -178,6 +310,22 @@
                 ,arrow: 'hover' //始终显示箭头
                 //,anim: 'updown' //切换动画方式
             });
+
+            {#$('.sider_bar_article_item p').toggle(#}
+            {#  function(){#}
+            {#    alert('1');#}
+            {#  }#}
+            {#);#}
+
+            $(".sider_bar_article_item p").click(function(){
+                {#debugger#}
+                {#console.log($(this).children('.sider_bar_article_item_detail'));#}
+                $(this).siblings(".sider_bar_article_item_detail").slideToggle();
+            });
+
+
+
+
         });
 
     </script>
