--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -20,6 +20,63 @@
 
 {% endblock %}
 
+<div class="footer">
+    <div class="container">
+        <div class="footer_item footer_item_1">
+            <div class="footer_title">
+                36氪产品服务矩阵
+            </div>
+            <ul class="clearfix">
+                <li><a href="#">开氪</a></li>
+                <li><a href="#">36氪研究院</a></li>
+                <li><a href="#">鲸准</a></li>
+                <li><a href="#">零售老板内参</a></li>
+                <li><a href="#">VCluba</a></li>
+                <li><a href="#">36氪海外站</a></li>
+                <li><a href="#">鲸准</a></li>
+                <li><a href="#">VCluba</a></li>
+                <li><a href="#">36氪创新咨询</a></li>
+            </ul>
+        </div>
+        <div class="footer_item footer_item_2">
+            <div class="footer_title">
+                关于36氪
+            </div>
+            <ul class="clearfix">
+                <li><a href="#">商务合作</a></li>
+                <li><a href="#">关于我们</a></li>
+                <li><a href="#">加入我们</a></li>
+                <li><a href="#">寻求报道</a></li>
+                <li><a href="#">我要投稿</a></li>
+            </ul>
+        </div>
+        <div class="footer_item footer_item_3">
+            <div class="footer_title">
+                合作伙伴
+            </div>
+            <ul class="clearfix">
+                <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo1.png', _external=True) }}" alt=""></a></li>
+                <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo2.png', _external=True) }}" alt=""></a></li>
+                <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo3.png', _external=True) }}" alt=""></a></li>
+                <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo1.png', _external=True) }}" alt=""></a></li>
+                <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo2.png', _external=True) }}" alt=""></a></li>
+                <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo2.png', _external=True) }}" alt=""></a></li>
+                <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo3.png', _external=True) }}" alt=""></a></li>
+                <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo1.png', _external=True) }}" alt=""></a></li>
+                <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo2.png', _external=True) }}" alt=""></a></li>
+            </ul>
+        </div>
+        <div class="footer_item footer_item_4">
+            <div class="footer_title">
+                36氪APP下载
+            </div>
+            <div class="qr_box">
+                <img src="{{ url_for('static',filename='images/qr_code.png', _external=True) }}" alt="">
+            </div>
+            <p>iOS & Android</p>
+        </div>
+    </div>
+</div>
 
 <script src="{{ url_for('static',filename='plugs/layui/layui.js', _external=True) }}"></script>
 {% block script %}
