--- a/server/static/css/common.css
+++ b/server/static/css/common.css
@@ -971,7 +971,6 @@ a, a:hover {
 
 .footer{
     background: #2d3237;
-    height: 300px;
     width: 100%;
     padding-top: 26px;
 }
@@ -1063,3 +1062,204 @@ a, a:hover {
     text-align: center;
     margin-top: 12px;
 }
+
+.footer .footerInfo-wrapper{
+    border-top: 1px solid #3b424a;
+    padding-bottom: 17px;
+    padding-top: 17px;
+}
+
+.footer .footer-logo{
+    display: inline-block;
+}
+
+.footer .footer-logo img{
+    margin-right: 30px;
+    width: 32px;
+}
+
+.footer .footerInfo-wrapper p{
+    color: #666;
+    font-size: 12px;
+    display: inline-block;
+}
+
+.footer .footerInfo-wrapper p a{
+    font-weight: bold;
+    font-size: 12px;
+    color: #ffffff;
+    /*display: inline-block;*/
+}
+
+.article_detail_box .article_cover_pic img{
+    border-radius: 2px;
+    height: 184px;
+    width: 690px;
+}
+
+.article_detail_box .article_title{
+    margin-top: 28px;
+    color: #262626;
+    /*font-family: PingFangSC-Medium;*/
+    font-size: 30px;
+    letter-spacing: 0;
+    line-height: 42px;
+    text-align: justify;
+    margin-bottom: 20px;
+}
+
+.article_detail_box .article{
+    width: 694px;
+}
+
+.article_detail_box .publish_box{
+    margin-bottom: 40px;
+}
+
+.article_detail_box .publish_box a{
+    font-size: 12px;
+    color: #4285f4;
+    display: inline-block;
+}
+
+.article_detail_box .publish_box .publish_time{
+    color: #a7a7a7;
+    font-size: 12px;
+}
+.article_detail_box .article_description{
+    color: #787878;
+    font-size: 16px;
+}
+
+.article_detail_box .article_description:after{
+    border: .5px solid #ddd;
+    content: "";
+    display: block;
+    margin: 20px 0;
+    width: 58px;
+}
+
+.article_detail_box .article address{
+    border: 0;
+    color: #4285f4;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 29px;
+    margin-bottom: 26px;
+    padding-left: 15px;
+    position: relative;
+}
+.article_detail_box .article address:before{
+    background-image: linear-gradient(0deg,#2e79f4,#83c3ff);
+    background-repeat: no-repeat;
+    background-size: 3px;
+    border-radius: 3px;
+    bottom: 6.5px;
+    content: "";
+    display: block;
+    left: 0;
+    position: absolute;
+    top: 6.5px;
+    width: 3px;
+}
+
+.article_detail_box .article h3{
+    font-size: 15px;
+    font-weight: 600;
+    line-height: 23px;
+    margin: 40px 0 14px;
+    padding-left: 14px;
+    position: relative;
+}
+
+.article_detail_box .article h3:before{
+    background: #4285f4;
+    bottom: 4px;
+    content: "";
+    display: block;
+    left: 0;
+    position: absolute;
+    top: 4px;
+    width: 4px;
+}
+
+
+.article_detail_box .article .article_detail_content{
+    font-size: 16px;
+}
+.article_detail_box .article .article_detail_content p{
+    margin-bottom: 26px;
+    word-wrap: break-word;
+}
+
+.article_detail_box .article .article_detail_content p img{
+    border-radius: 5px;
+    display: block;
+    margin: 30px auto;
+    max-width: 690px;
+}
+.article_detail_box .article .article_detail_content p a{
+    border: solid #999;
+    border-width: 0 0 1px;
+    color: #3d464d;
+    padding: 0 0 1px;
+    word-wrap: break-word;
+    /*text-decoration: #0C0C0C;*/
+}
+.article_detail_box .article .article_detail_content p a:hover{
+    border-color: #4d7fd0;
+    color: #4d7fd0;
+}
+
+.article_detail_box .article .article-footer-txt{
+    color: #a7a7a7;
+    font-size: 14px;
+    letter-spacing: 0;
+    line-height: 25px;
+    margin-bottom: 20px;
+}
+.article_detail_box .article .adv_box{
+    height: 140px;
+    width: 690px;
+    margin-bottom: 20px;
+}
+
+.article_detail_box .article .adv_box img{
+    border-radius: 2px;
+    height: 100%;
+    width: 100%;
+}
+
+.article_detail_box .article .thumb-up-box-inner{
+    margin: auto;
+    position: relative;
+    width: 70px;
+    height: 70px;
+    background-size:70px 70px;
+    background-image: url(../images/ic_article_praise_normal@2x.7c816373.png);
+}
+
+.article_detail_box .article .thumb-up-box-inner.up{
+    background-image: url(../images/ic_article_praise_selected@2x.90eeb38c.png);
+}
+
+.article_detail_box .article .thumb-up-box-inner span{
+    font-size: 12px;
+    letter-spacing: 0;
+    text-align: center;
+    width: 70px;
+    position: absolute;
+    top: 42px;
+    opacity: .4;
+}
+.article_detail_box .article .thumb-up-box-inner span.up{
+    color: #eb000d;
+}
+
+.article_detail_box .article .thumb-up-box p{
+    color: #262626;
+    text-align: center;
+    margin-top: 10px;
+    margin-bottom: 40px;
+}
+
