--- a/server/templates/base.html
+++ b/server/templates/base.html
@@ -15,66 +15,142 @@
 </head>
 <body>
 
-<!-- 你的HTML代码 -->
-{% block container %}
 
-{% endblock %}
+
+<div class="container" style="overflow: hidden;">
+        <div id="box-left">
+            <div class="nav-menu">
+                <a class="clearfix" href="/" class=""><div class="logo"></div></a>
+                <div class="clearfix">
+                    <div class="line"></div>
+                </div>
+                <ul class="ul-nav">
+                    <li class="avtive"><a href="#">首页</a></li>
+                    <li><a href="#">快讯</a></li>
+                    <li>
+                        <span class="open-icon"></span>
+                        <a href="#">资讯</a>
+                        <ul class="sub-list">
+                            <li class="sub-item">
+                                <a href="#">最新</a>
+                            </li>
+                            <li class="sub-item">
+                                <a href="#">推荐</a>
+                            </li>
+                            <li class="sub-item">
+                                <a href="#">创投</a>
+                                <span class="hot"></span>
+                            </li>
+                            <li class="sub-item">
+                                <a href="#">科技</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li><a href="#">视频</a></li>
+                </ul>
+                <div class="search-button">
+                    <span class="search-icon"></span>
+                    <span class="search-text">搜索</span>
+                </div>
+                <a class="left-box-a" href="#"><span class="seek-report-icon"></span>寻求报道</a>
+                <a class="left-box-a" href="#"><span class="i-want-contribution-icon"></span>我要投稿</a>
+                <a class="left-box-a" href="#"><span class="seek-finance-entry-icon"></span>寻求投资</a>
+            </div>
+{#            <span style="width: 100px;display: block;height: 1px;"></span>#}
+        </div>
+        <div id="box-right">
+            <div class="box-right-header">
+                <div class="kr-header">
+                    <a class="kr-header-btn login"><span>登录</span></a>
+                    <a class="line">|</a>
+                    <a class="kr-header-btn resgister"><span>注册</span></a>
+                </div>
+                <ul class="business-line">
+                   <li><a href="#" target="_blank" rel="noopener noreferrer">开氪</a></li>
+                   <li><a href="#" target="_blank" rel="noopener noreferrer">VClub投资机构</a></li>
+                   <li class="kr-product"><span class="kr_36">36氪</span><span class="product">旗下产品</span></li>
+                </ul>
+            </div>
+            <div class="content">
+                <!-- 你的HTML代码 -->
+                {% block content %}
+
+                {% endblock %}
+
+            </div>
+        </div>
+    </div>
+
 
 <div class="footer">
     <div class="container">
-        <div class="footer_item footer_item_1">
-            <div class="footer_title">
-                36氪产品服务矩阵
+        <div style="margin-left: 143px;">
+        <div class="clearfix">
+            <div class="footer_item footer_item_1">
+                <div class="footer_title">
+                    36氪产品服务矩阵
+                </div>
+                <ul class="clearfix">
+                    <li><a href="#">开氪</a></li>
+                    <li><a href="#">36氪研究院</a></li>
+                    <li><a href="#">鲸准</a></li>
+                    <li><a href="#">零售老板内参</a></li>
+                    <li><a href="#">VCluba</a></li>
+                    <li><a href="#">36氪海外站</a></li>
+                    <li><a href="#">鲸准</a></li>
+                    <li><a href="#">VCluba</a></li>
+                    <li><a href="#">36氪创新咨询</a></li>
+                </ul>
             </div>
-            <ul class="clearfix">
-                <li><a href="#">开氪</a></li>
-                <li><a href="#">36氪研究院</a></li>
-                <li><a href="#">鲸准</a></li>
-                <li><a href="#">零售老板内参</a></li>
-                <li><a href="#">VCluba</a></li>
-                <li><a href="#">36氪海外站</a></li>
-                <li><a href="#">鲸准</a></li>
-                <li><a href="#">VCluba</a></li>
-                <li><a href="#">36氪创新咨询</a></li>
-            </ul>
+            <div class="footer_item footer_item_2">
+                <div class="footer_title">
+                    关于36氪
+                </div>
+                <ul class="clearfix">
+                    <li><a href="#">商务合作</a></li>
+                    <li><a href="#">关于我们</a></li>
+                    <li><a href="#">加入我们</a></li>
+                    <li><a href="#">寻求报道</a></li>
+                    <li><a href="#">我要投稿</a></li>
+                </ul>
+            </div>
+            <div class="footer_item footer_item_3">
+                <div class="footer_title">
+                    合作伙伴
+                </div>
+                <ul class="clearfix">
+                    <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo1.png', _external=True) }}" alt=""></a></li>
+                    <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo2.png', _external=True) }}" alt=""></a></li>
+                    <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo3.png', _external=True) }}" alt=""></a></li>
+                    <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo1.png', _external=True) }}" alt=""></a></li>
+                    <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo2.png', _external=True) }}" alt=""></a></li>
+                    <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo2.png', _external=True) }}" alt=""></a></li>
+                    <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo3.png', _external=True) }}" alt=""></a></li>
+                    <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo1.png', _external=True) }}" alt=""></a></li>
+                    <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo2.png', _external=True) }}" alt=""></a></li>
+                </ul>
+            </div>
+            <div class="footer_item footer_item_4">
+                <div class="footer_title">
+                    36氪APP下载
+                </div>
+                <div class="qr_box">
+                    <img src="{{ url_for('static',filename='images/qr_code.png', _external=True) }}" alt="">
+                </div>
+                <p>iOS & Android</p>
+            </div>
         </div>
-        <div class="footer_item footer_item_2">
-            <div class="footer_title">
-                关于36氪
-            </div>
-            <ul class="clearfix">
-                <li><a href="#">商务合作</a></li>
-                <li><a href="#">关于我们</a></li>
-                <li><a href="#">加入我们</a></li>
-                <li><a href="#">寻求报道</a></li>
-                <li><a href="#">我要投稿</a></li>
-            </ul>
+        <div class="footerInfo-wrapper">
+            <a href="#" class="footer-logo"><img src="{{ url_for('static',filename='images/logoWhite.2a5eceda.png', _external=True) }}" alt=""></a>
+            <p>
+                本站由<a href="#">&nbsp;&nbsp;&nbsp;阿里云 提供计算与安全服务&nbsp;&nbsp;&nbsp;</a>
+                <span>
+                    © 2011~2018 北京品新传媒文化有限公司&nbsp;|&nbsp;京ICP备12031756号&nbsp;|&nbsp;京ICP证150143号&nbsp;|&nbsp;京公网安备11010502036099号
+                </span>
+            </p>
         </div>
-        <div class="footer_item footer_item_3">
-            <div class="footer_title">
-                合作伙伴
-            </div>
-            <ul class="clearfix">
-                <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo1.png', _external=True) }}" alt=""></a></li>
-                <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo2.png', _external=True) }}" alt=""></a></li>
-                <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo3.png', _external=True) }}" alt=""></a></li>
-                <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo1.png', _external=True) }}" alt=""></a></li>
-                <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo2.png', _external=True) }}" alt=""></a></li>
-                <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo2.png', _external=True) }}" alt=""></a></li>
-                <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo3.png', _external=True) }}" alt=""></a></li>
-                <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo1.png', _external=True) }}" alt=""></a></li>
-                <li><a href="#"><img src="{{ url_for('static',filename='images/link_logo2.png', _external=True) }}" alt=""></a></li>
-            </ul>
         </div>
-        <div class="footer_item footer_item_4">
-            <div class="footer_title">
-                36氪APP下载
-            </div>
-            <div class="qr_box">
-                <img src="{{ url_for('static',filename='images/qr_code.png', _external=True) }}" alt="">
-            </div>
-            <p>iOS & Android</p>
-        </div>
+
     </div>
 </div>
 
